--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="normalize.css">
   <title>Система учета квот МРТ/КТ исследований</title>
 </head>
+
 <body>
-  <div id="root"></div>
-  
+  <div class="container">
+    <div id="root"></div>
+  </div>
 </body>
+
 </html>
